# elc-api

./: .gitignore  Dockerfile  Procfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: bank.py  company.py  login.py  users.py  (+1 more)
app/core/: config.py
app/crud/: bank.py  file.py  transaction.py  user.py
app/db/: init_db.py  session.py
app/models/: base.py  company.py  file.py  user.py
app/schemas/: bank.py  file.py  transaction.py
app/tests/: test_ping.py
backend/: Dockerfile
backend/app/: main.py  utils.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  bank.py  base.py  company.py  transaction.py  user.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  bank.py  base.py  company.py  transaction.py  user.py
backend/app/schemas/: __init__.py  company.py  token.py  user.py
backend/src/: main.py
examples/: blog.db  requirements.txt  working.py
examples/app/: main.py
examples/app/routers/: users.py
examples/blog/: database.py  main.py  models.py  schemas.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 7d1686e8c8b0_first_commit.py
src/app/: initial_data.py
src/app/core/: config.py  security.py
src/app/crud/: base.py  company.py  transaction.py  user.py
src/app/db/: init_db.py
src/app/models/: bank.py  user.py
src/app/schemas/: user.py
(+8 files in other folders)
